增加前端首頁畫面

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,12 +98,71 @@
 
 
 
-<section class="ftco-section">
+<section class="ftco-section" style="padding-bottom: 50px">
   <div class="container">
     <div class="row justify-content-center pb-5 mb-3">
 
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h2>領養資訊</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 ftco-animate">
+        <div class="work mb-4 img d-flex align-items-end"
+             style="background-image: url(images/gallery-1.jpg);">
+          <a href="images/gallery-1.jpg"
+             class="icon image-popup d-flex justify-content-center align-items-center">
+            <span class="fa fa-expand"></span>
+          </a>
+          <div class="desc w-100 px-4">
+            <div class="text w-100 mb-3">
+              <span>Cat</span>
+              <h2><a href="work-single.html">Persian Cat</a></h2>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 ftco-animate">
+        <div class="work mb-4 img d-flex align-items-end"
+             style="background-image: url(images/gallery-2.jpg);">
+          <a href="images/gallery-2.jpg"
+             class="icon image-popup d-flex justify-content-center align-items-center">
+            <span class="fa fa-expand"></span>
+          </a>
+          <div class="desc w-100 px-4">
+            <div class="text w-100 mb-3">
+              <span>Dog</span>
+              <h2><a href="work-single.html">Pomeranian</a></h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 ftco-animate">
+        <div class="work mb-4 img d-flex align-items-end"
+             style="background-image: url(images/gallery-3.jpg);">
+          <a href="images/gallery-3.jpg"
+             class="icon image-popup d-flex justify-content-center align-items-center">
+            <span class="fa fa-expand"></span>
+          </a>
+          <div class="desc w-100 px-4">
+            <div class="text w-100 mb-3">
+              <span>Cat</span>
+              <h2><a href="work-single.html">Sphynx Cat</a></h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
+</section>
+
+<section class="ftco-section" style="padding: 0px; padding-top: 0px; padding-bottom: 100px;">
+  <div class="container">
+    <div class="row justify-content-center pb-5 mb-3">
+
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h2>走失協尋</h2>
       </div>
     </div>
     <div class="row">
@@ -153,6 +212,7 @@
           </div>
         </div>
       </div>
+
 </section>
 
 
