--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -25,6 +25,12 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="css/kidz.css">
+
+    <style>
+        .page_show{ padding: 40px 0; text-align: center;}
+        .page_show span{ display: inline-block; height: 28px; line-height: 28px; padding: 0 11px; margin: 0 5px; text-align: center; font-size: 14px; border-radius:1px; border: #b7b7b7 solid 1px; background-color: #f8f8f8; cursor: pointer;}
+        span.page_cur{ color: #fff;; border: #282828 solid 1px; background-color: #424242;}
+    </style>
 </head>
 
 <body>
@@ -173,17 +179,13 @@
     </div>
 </section>
 
+
+
 <div style="margin: auto; width: 220px;">
     <p id="pageInfo"></p><br>
-    <button onclick="goPrePage()">上一頁</button>
-    <select id="page" onchange="sendPageToServer()">
-
-        <option th:each="i:${pages}" th:text="${i}"></option>
-
-
-    </select>
-    <button onclick="goNextPage()">下一頁</button>
+    <div class="page_show"></div>
 </div>
+
 
 <footer class="footer">
     <div class="row mt-5">
@@ -230,6 +232,8 @@
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
 <script>
+    var limit;
+    var pages;
 
     $.ajax({
         type: "GET",
@@ -272,69 +276,20 @@
 
 
             $("#test1Result").append(html);
-
-            var pages = Math.ceil(data.total/data.limit);
-            var page = 1;
-
-            if (data.offset/data.limit!=0) {
-                page = data.offset / data.limit;
-            }
-
-
-
         })
+
+        pages = Math.ceil(data.total/data.limit);
+        console.log(data.offset/data.limit)
+        limit = data.limit;
+
+        $("#pageInfo").text("總頁數:"+pages+"  總筆數:"+data.total);
+        pageSet(pages);
+
         console.log("單頁筆數limit:"+data["limit"]);
         console.log("跳過幾筆資料offset:"+data["offset"]);
         console.log("總筆數:"+data["total"]);
-        pageSet(data);
+
         $.getScript('js/main.js');
-    }
-    function pageSet(data) {
-        var pages = Math.ceil(data.total/data.limit);
-        var page;
-        console.log(data.offset/data.limit)
-        if (data.offset/data.limit!=0) {
-            page = (data.offset / data.limit)+1;
-        }else {
-            page = 1;
-        }
-        $("#pageInfo").text("頁碼:"+page+" / 總頁數:"+pages+"  總筆數:"+data.total);
-        $("#pageInfo").attr("limit", data.limit);
-        $("#pageInfo").attr("page", page);
-        $("#pageInfo").attr("pages", pages);
-    }
-    function goNextPage() {
-        var limit = parseInt($("#pageInfo").attr("limit"));
-        var page = parseInt($("#pageInfo").attr("page"));
-        var pages = parseInt($("#pageInfo").attr("pages"));
-        if (page < pages) {
-            page = page+1;
-            $("#pageInfo").attr("page", page);
-            $.ajax({
-                type: "GET",
-                url: "/personalAnimals?offset=" + limit*(page-1),
-                success: function (data) {
-                    getAnimalList(data);
-                }
-            })
-        }
-    }
-
-    function goPrePage() {
-        var limit = parseInt($("#pageInfo").attr("limit"));
-        var page = parseInt($("#pageInfo").attr("page"));
-        if (page>1) {
-            page = page-1;
-            $("#pageInfo").attr("page", page);
-            $.ajax({
-                type: "GET",
-                url: "/personalAnimals?offset=" + limit*(page-1),
-                success: function (data) {
-                    getAnimalList(data);
-                }
-            })
-        }
-
     }
 
     function getAnimalInfo(gid) {
@@ -359,12 +314,78 @@
 
                 console.log("編號:" + data.animalId + "\n名字:" + data.animalName + "\n物種:" + data.animalKind + "\n品種:" + data.animalVariety + "\n性別:" + data.animalSex + "\n絕育:" + data.animalSterilization + "\n疫苗:" + data.animalBacterin +
                     "\n地區:" + data.area + "\n電話:" + data.phone + "\n圖片:" + data.imageUrl + "\n備註:" + data.description + "\n刊登日期:" + data.createdDate + "\n更新日期:" + data.lastModifiedDate);
-
             }
         });
     }
 
+    //輸出頁碼
+    function pageSet(pages){
+        var pageHtml = '';
+        var start , end;
+        if(listPage < 6){
+            start = 1;
+        }else{
+            start = listPage - 5;
+        }
+        if(listPage > pages - 5){
+            end = pages;
+        }else{
+            end = listPage + 5;
+        }
 
+        if(listPage > 1){
+            pageHtml += '<span>上一頁</span>';
+        }
+        for(var i = start , page_cur = '' ; i <= end ; i++){
+            if(listPage == i){
+                page_cur = 'page_cur';
+            }else{
+                page_cur = '';
+            }
+            pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
+        }
+        if(listPage < pages){
+            pageHtml += '<span>下一頁</span>';
+        }
+        $('.page_show').empty().append(pageHtml);
+    }
+
+    //選擇分頁
+    $('body').on('click','.page_show span',function(){
+        var $this = $(this);
+        if($this.hasClass('page_cur')){
+            return;
+        }
+        var page = $this.html();
+        if(page == '上一頁'){
+            listPage = listPage - 1;
+            changePage(listPage);
+            // goPrePage();
+        }else if(page == '下一頁'){
+            listPage = listPage + 1;
+            changePage(listPage);
+            // goNextPage();
+        }else{
+            listPage = parseInt(page);
+            changePage(listPage);
+        }
+        //根據頁碼獲取當前頁列表數據
+        pageSet(pages);
+    });
+    var listPage = 1;
+
+    function changePage(page) {
+        var offset = limit*(page-1);
+        console.log(offset);
+        console.log(page);
+        $.ajax({
+            type: "GET",
+            url: "/personalAnimals?offset=" + limit*(page-1),
+            success: function (data) {
+                getAnimalList(data);
+            }
+        })
+    }
 </script>
 
 
