--- a/src/main/resources/templates/missing.html
+++ b/src/main/resources/templates/missing.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+  <script  src="js/checkLogin.js"></script>
+
   <title>走失協尋 -寵物資訊平台</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -48,7 +51,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" ><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
+      <a class="navbar-brand" >🐾寵物資訊平台</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="fa fa-bars"></span>
@@ -58,10 +61,14 @@
 
           <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
 					<li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
 					<li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+          <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登寵物</a></li>
+          <li id="userPublishHistory" class="nav-item"></li>
 
-					<li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+          <li id="userManagement" class="nav-item"></li>
+
+					<li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+
         </ul>
       </div>
     </div>
@@ -83,146 +90,10 @@
 
   <section class="ftco-section">
     <div class="container">
-      <div class="row">
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-1.jpg);">
-            <a href="images/gallery-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">Persian Cat</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-2.jpg);">
-            <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pomeranian</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-3.jpg);">
-            <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">Sphynx Cat</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-4.jpg);">
-            <a href="images/gallery-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">British Shorthair</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-5.jpg);">
-            <a href="images/gallery-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Beagle</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-6.jpg);">
-            <a href="images/gallery-6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pug</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-7.jpg);">
-            <a href="images/gallery-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">British Shorthair</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-8.jpg);">
-            <a href="images/gallery-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Beagle</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-9.jpg);">
-            <a href="images/gallery-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pug</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-     
-      <div class="row mt-5">
-        <div class="col text-center">
-          <div class="block-27">
-            <ul>
-              <li><a href="#">&lt;</a></li>
-              <li class="active"><span>1</span></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#">&gt;</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      animals
     </div>
   </section>
-
+pages
   <footer class="footer">
     <div class="row mt-5">
       <div class="col-md-12 text-center">
