--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -2,97 +2,97 @@
 <html lang="en">
 
 <head>
-	<script  src="js/checkLogin.js"></script>
-	<script>
+    <script src="js/checkLogin.js"></script>
+    <script>
 
-			xhr = new XMLHttpRequest()
-			xhr.addEventListener("load", function (){
+        xhr = new XMLHttpRequest()
+        xhr.addEventListener("load", function () {
 
-				if(xhr.status=200){
-					var animalContext = document.getElementById("animalContext")
-					var publishAll= JSON.parse(xhr.responseText)
+            if (xhr.status = 200) {
+                var animalContext = document.getElementById("animalContext")
+                var publishAll = JSON.parse(xhr.responseText)
 
-					for(let i=0;i<publishAll.length;i++){
+                for (let i = 0; i < publishAll.length; i++) {
 
-						var divAnimal=document.createElement('div')
-						divAnimal.setAttribute('style',"width: 300px; margin: 10px;")
+                    var divAnimal = document.createElement('div')
+                    divAnimal.setAttribute('style', "width: 300px; margin: 10px;")
 
-						var divout=document.createElement('div')
-						var h3= document.createElement('h3')
-						var a=document.createElement('a')
-						const variety=document.createTextNode(publishAll[i].variety)
-						a.setAttribute('href',`http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
-						a.appendChild(variety)
-						h3.appendChild(a)
+                    var divout = document.createElement('div')
+                    var h3 = document.createElement('h3')
+                    var a = document.createElement('a')
+                    const variety = document.createTextNode(publishAll[i].variety)
+                    a.setAttribute('href', `http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
+                    a.appendChild(variety)
+                    h3.appendChild(a)
 
-						var ul=document.createElement('ul')
-						const body=document.createTextNode(publishAll[i].bodyShape)
-						var li=document.createElement('li')
-						li.appendChild(body)
-						ul.appendChild(li)
-						const age=document.createTextNode(publishAll[i].age)
-						var li=document.createElement('li')
-						li.appendChild(age)
-						ul.appendChild(li)
-						const color=document.createTextNode(publishAll[i].color)
-						var li=document.createElement('li')
-						li.appendChild(color)
-						ul.appendChild(li)
-						const kind=document.createTextNode(publishAll[i].kind)
-						var li=document.createElement('li')
-						li.appendChild(kind)
-						ul.appendChild(li)
-						const ligation=document.createTextNode(publishAll[i].ligation)
-						var li=document.createElement('li')
-						li.appendChild(ligation)
-						ul.appendChild(li)
-						const sex=document.createTextNode(publishAll[i].sex)
-						var li=document.createElement('li')
-						li.appendChild(sex)
-						ul.appendChild(li)
-						const remark=document.createTextNode(publishAll[i].remark)
-						var li=document.createElement('li')
-						li.appendChild(remark)
-						ul.appendChild(li)
+                    var ul = document.createElement('ul')
+                    const body = document.createTextNode(publishAll[i].bodyShape)
+                    var li = document.createElement('li')
+                    li.appendChild(body)
+                    ul.appendChild(li)
+                    const age = document.createTextNode(publishAll[i].age)
+                    var li = document.createElement('li')
+                    li.appendChild(age)
+                    ul.appendChild(li)
+                    const color = document.createTextNode(publishAll[i].color)
+                    var li = document.createElement('li')
+                    li.appendChild(color)
+                    ul.appendChild(li)
+                    const kind = document.createTextNode(publishAll[i].kind)
+                    var li = document.createElement('li')
+                    li.appendChild(kind)
+                    ul.appendChild(li)
+                    const ligation = document.createTextNode(publishAll[i].ligation)
+                    var li = document.createElement('li')
+                    li.appendChild(ligation)
+                    ul.appendChild(li)
+                    const sex = document.createTextNode(publishAll[i].sex)
+                    var li = document.createElement('li')
+                    li.appendChild(sex)
+                    ul.appendChild(li)
+                    const remark = document.createTextNode(publishAll[i].remark)
+                    var li = document.createElement('li')
+                    li.appendChild(remark)
+                    ul.appendChild(li)
 
-						divout.appendChild(h3)
-						divout.appendChild(ul)
-						var divinner=document.createElement('div')
-						var atel=document.createElement('a')
-						const tel=document.createTextNode("撥打電話")
-						atel.setAttribute('href',`tel:${publishAll[i].tel}`)
-						atel.appendChild(tel)
-						divinner.appendChild(atel)
+                    divout.appendChild(h3)
+                    divout.appendChild(ul)
+                    var divinner = document.createElement('div')
+                    var atel = document.createElement('a')
+                    const tel = document.createTextNode("撥打電話")
+                    atel.setAttribute('href', `tel:${publishAll[i].tel}`)
+                    atel.appendChild(tel)
+                    divinner.appendChild(atel)
 
-						divout.appendChild(divinner)
-
-
-						var img=document.createElement('img')
-						img.setAttribute('src',`http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
-						img.setAttribute('width',"300")
-						img.setAttribute('height','400')
-						var aimg=document.createElement('a')
-						aimg.setAttribute('href',`http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
-						aimg.appendChild(img)
-
-						divAnimal.appendChild(aimg)
-						divAnimal.appendChild(divout)
-						animalContext.appendChild(divAnimal)
-
-					}
-				}
-
-			})
-
-			xhr.open("get","http://localhost:8080/publish_animals/all")
-
-			xhr.send()
+                    divout.appendChild(divinner)
 
 
-	</script>
-	<title>一般領養 -寵物資訊平台</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                    var img = document.createElement('img')
+                    img.setAttribute('src', `http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
+                    img.setAttribute('width', "300")
+                    img.setAttribute('height', '400')
+                    var aimg = document.createElement('a')
+                    aimg.setAttribute('href', `http://localhost:8080/images/publish/${publishAll[i].photo_url}.jpg`)
+                    aimg.appendChild(img)
+
+                    divAnimal.appendChild(aimg)
+                    divAnimal.appendChild(divout)
+                    animalContext.appendChild(divAnimal)
+
+                }
+            }
+
+        })
+
+        xhr.open("get", "http://localhost:8080/publish_animals/all")
+
+        xhr.send()
+
+
+    </script>
+    <title>一般領養 -寵物資訊平台</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
           rel="stylesheet">
@@ -115,9 +115,30 @@
     <link rel="stylesheet" href="css/kidz.css">
 
     <style>
-        .page_show{ padding: 40px 0; text-align: center;}
-        .page_show span{ display: inline-block; height: 28px; line-height: 28px; padding: 0 11px; margin: 0 5px; text-align: center; font-size: 14px; border-radius:1px; border: #b7b7b7 solid 1px; background-color: #f8f8f8; cursor: pointer;}
-        span.page_cur{ color: #fff;; border: #282828 solid 1px; background-color: #424242;}
+        .page_show {
+            padding: 40px 0;
+            text-align: center;
+        }
+
+        .page_show span {
+            display: inline-block;
+            height: 28px;
+            line-height: 28px;
+            padding: 0 11px;
+            margin: 0 5px;
+            text-align: center;
+            font-size: 14px;
+            border-radius: 1px;
+            border: #b7b7b7 solid 1px;
+            background-color: #f8f8f8;
+            cursor: pointer;
+        }
+
+        span.page_cur {
+            color: #fff;;
+            border: #282828 solid 1px;
+            background-color: #424242;
+        }
     </style>
 </head>
 
@@ -128,59 +149,60 @@
         <div class="row">
             <div class="col-md-6 d-flex align-items-center">
 
-				</div>
-				<div class="col-md-6 d-flex justify-content-md-end">
-					<div class="social-media">
-			    		<p class="mb-0 d-flex">
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container">
-			<a class="navbar-brand" >🐾寵物資訊平台</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="fa fa-bars"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
+            </div>
+            <div class="col-md-6 d-flex justify-content-md-end">
+                <div class="social-media">
+                    <p class="mb-0 d-flex">
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                        <a href="#" class="d-flex align-items-center justify-content-center"></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+        <a class="navbar-brand">🐾寵物資訊平台</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
 
-					<li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
 
-					<li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登寵物</a></li>
-					<li id="userPublishHistory" class="nav-item"></li>
+                <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登寵物</a></li>
+                <li id="userPublishHistory" class="nav-item"></li>
 
-					<li id="userManagement" class="nav-item"></li>
+                <li id="userManagement" class="nav-item"></li>
 
-					<li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
+                                                            class="nav-link">登入註冊</a></li>
 
-				</ul>
-			</div>
-		</div>
-	</nav>
-	<!-- END nav -->
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
-		data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row no-gutters slider-text align-items-end">
-				<div class="col-md-9 ftco-animate pb-5">
-					<p class="breadcrumbs mb-2"><span>一般領養 <i
-								class="ion-ios-arrow-forward"></i></span></p>
-					<h1 class="mb-0 bread">一般領養</h1>
-				</div>
-			</div>
-		</div>
-	</section>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- END nav -->
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
+         data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text align-items-end">
+            <div class="col-md-9 ftco-animate pb-5">
+                <p class="breadcrumbs mb-2"><span>一般領養 <i
+                        class="ion-ios-arrow-forward"></i></span></p>
+                <h1 class="mb-0 bread">一般領養</h1>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Modal -->
 <div class="modal-body">
@@ -271,7 +293,6 @@
         </div>
     </div>
 </section>
-
 
 
 <div style="margin: auto; width: 800px;">
@@ -371,16 +392,16 @@
             $("#test1Result").append(html);
         })
 
-        pages = Math.ceil(data.total/data.limit);
-        console.log(data.offset/data.limit)
+        pages = Math.ceil(data.total / data.limit);
+        console.log(data.offset / data.limit)
         limit = data.limit;
 
-        $("#pageInfo").text("總頁數:"+pages+"  總筆數:"+data.total);
+        $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
         pageSet(pages);
 
-        console.log("單頁筆數limit:"+data["limit"]);
-        console.log("跳過幾筆資料offset:"+data["offset"]);
-        console.log("總筆數:"+data["total"]);
+        console.log("單頁筆數limit:" + data["limit"]);
+        console.log("跳過幾筆資料offset:" + data["offset"]);
+        console.log("總筆數:" + data["total"]);
 
         $.getScript('js/main.js');
     }
@@ -412,53 +433,53 @@
     }
 
     //輸出頁碼
-    function pageSet(pages){
+    function pageSet(pages) {
         var pageHtml = '';
-        var start , end;
-        if(listPage < 6){
+        var start, end;
+        if (listPage < 6) {
             start = 1;
-        }else{
+        } else {
             start = listPage - 5;
         }
-        if(listPage > pages - 5){
+        if (listPage > pages - 5) {
             end = pages;
-        }else{
+        } else {
             end = listPage + 5;
         }
 
-        if(listPage > 1){
+        if (listPage > 1) {
             pageHtml += '<span>上一頁</span>';
         }
-        for(var i = start , page_cur = '' ; i <= end ; i++){
-            if(listPage == i){
+        for (var i = start, page_cur = ''; i <= end; i++) {
+            if (listPage == i) {
                 page_cur = 'page_cur';
-            }else{
+            } else {
                 page_cur = '';
             }
             pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
         }
-        if(listPage < pages){
+        if (listPage < pages) {
             pageHtml += '<span>下一頁</span>';
         }
         $('.page_show').empty().append(pageHtml);
     }
 
     //選擇分頁
-    $('body').on('click','.page_show span',function(){
+    $('body').on('click', '.page_show span', function () {
         var $this = $(this);
-        if($this.hasClass('page_cur')){
+        if ($this.hasClass('page_cur')) {
             return;
         }
         var page = $this.html();
-        if(page == '上一頁'){
+        if (page == '上一頁') {
             listPage = listPage - 1;
             changePage(listPage);
             // goPrePage();
-        }else if(page == '下一頁'){
+        } else if (page == '下一頁') {
             listPage = listPage + 1;
             changePage(listPage);
             // goNextPage();
-        }else{
+        } else {
             listPage = parseInt(page);
             changePage(listPage);
         }
@@ -468,12 +489,12 @@
     var listPage = 1;
 
     function changePage(page) {
-        var offset = limit*(page-1);
+        var offset = limit * (page - 1);
         console.log(offset);
         console.log(page);
         $.ajax({
             type: "GET",
-            url: "/personalAnimals?offset=" + limit*(page-1),
+            url: "/personalAnimals?offset=" + limit * (page - 1),
             success: function (data) {
                 getAnimalList(data);
             }
