--- a/src/main/resources/templates/user_management.html
+++ b/src/main/resources/templates/user_management.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script  src="js/checkLogin.js"></script>
+    <script src="js/checkLogin.js"></script>
 
 
     <title>會員中心 -寵物資訊平台</title>
@@ -51,7 +51,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" >🐾寵物資訊平台</a>
+        <a class="navbar-brand">🐾寵物資訊平台</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
@@ -67,7 +67,8 @@
 
                 <li id="userManagement" class="nav-item"></li>
 
-                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
+                                                            class="nav-link">登入註冊</a></li>
 
             </ul>
         </div>
@@ -99,13 +100,13 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <p id="userEmail" type="text" class="form-control"
-                                       >
+                                >
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <p id="userName" type="text" class="form-control" >
+                                <p id="userName" type="text" class="form-control">
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -125,14 +126,15 @@
         </div>
     </div>
 </section>
-<button  class="btn btn-primary py-3 px-4">修改基本資料</button>
+<button class="btn btn-primary py-3 px-4">修改基本資料</button>
 
 <footer class="footer">
     <div class="row mt-5">
         <div class="col-md-12 text-center">
             <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+                <script>document.write(new Date().getFullYear());</script>
+                All rights reserved | This template is made with <i
                         class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
                                                                           target="_blank">Colorlib.com</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -142,14 +144,14 @@
 </footer>
 
 
-
-
 <!-- loader -->
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-    <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-    <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-            stroke="#F96D00" />
-</svg></div>
+<div id="ftco-loader" class="show fullscreen">
+    <svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00"/>
+    </svg>
+</div>
 
 
 <script src="js/jquery.min.js"></script>
