--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script  src="js/checkLogin.js"></script>
+    <script src="js/checkLogin.js"></script>
 
     <style>
         table {
@@ -20,7 +20,8 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
-        dialog{
+
+        dialog {
             border: none;
             box-shadow: 0 2px 6px #ccc;
             border-radius: 10px;
@@ -72,7 +73,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" >🐾寵物資訊平台</a>
+        <a class="navbar-brand">🐾寵物資訊平台</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
@@ -87,7 +88,8 @@
                 <li id="userPublishHistory" class="nav-item"></li>
                 <li id="userManagement" class="nav-item"></li>
 
-                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
+                                                            class="nav-link">登入註冊</a></li>
 
             </ul>
         </div>
@@ -118,7 +120,7 @@
 <dialog id="infoModal">
     <div class="col-md-6">
         <div class="form-group">
-            <input id="updateKind" type="text" class="form-control" placeholder="種類" >
+            <input id="updateKind" type="text" class="form-control" placeholder="種類">
         </div>
     </div>
     <div class="col-md-6">
@@ -163,7 +165,7 @@
     </div>
     <div class="col-md-6">
         <div class="form-group">
-            <input type="file" id="animalPhoto" />
+            <input type="file" id="animalPhoto"/>
         </div>
     </div>
     <button onclick="updatePublish()">修改</button>
@@ -184,7 +186,6 @@
     </tr>
 
 
-
 </table>
 
 
@@ -193,7 +194,8 @@
         <div class="col-md-12 text-center">
             <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+                <script>document.write(new Date().getFullYear());</script>
+                All rights reserved | This template is made with <i
                         class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
                                                                           target="_blank">Colorlib.com</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -203,14 +205,14 @@
 </footer>
 
 
-
-
 <!-- loader -->
-<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-    <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-    <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-            stroke="#F96D00" />
-</svg></div>
+<div id="ftco-loader" class="show fullscreen">
+    <svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00"/>
+    </svg>
+</div>
 
 
 <script src="js/jquery.min.js"></script>
@@ -234,18 +236,15 @@
 <script src="js/delPublish.js"></script>
 
 
-
-
-
 <script>
-    let close=document.querySelector("#close");
-close.addEventListener("click", function(){
-    infoModal.close();
-})
- let delclose=document.querySelector("#delclose");
-    delclose.addEventListener("click", function(){
-    delinfoModal.close();
-})</script>
+    let close = document.querySelector("#close");
+    close.addEventListener("click", function () {
+        infoModal.close();
+    })
+    let delclose = document.querySelector("#delclose");
+    delclose.addEventListener("click", function () {
+        delinfoModal.close();
+    })</script>
 </body>
 
 </html>
